2004-02-28  Larry Jones  <lawrence.jones@ugsplm.com>

	* update.c (join_file): One more fix to avoid dereferencing NULL.
	(Reported by Steve McIntyre <steve@einval.com>.)
	* sanity.sh (join6): New tests for above.

2004-02-25  Larry Jones  <lawrence.jones@ugsplm.com>

	* update.c (join_file): Fix optimization to avoid dereferencing NULL.
	(Reported by Steve McIntyre <steve@einval.com>.)

2004-02-25  Derek Price  <derek@ximbiot.com>

	No longer require directories specified to `checkout -d' to exist.

	* checkout.c (safe_location): Only confirm that destination is a safe
	location for directories that already exist since we can assume that
	creating directories under such a safe directory is acceptable.
	(dir_to_build): Remove just_chdir member.
	(checkout_proc): Add trace.  No longer set dir_to_build->just_chdir.
	Minor reformatting.
	(build_dirs_and_chdir): Don't create or register directories that are
	not created.
	* sanity.sh (*): Update tests to account for new behavior.

2004-02-25  Derek Price  <derek@ximbiot.com>

	* buffer.c (buf_empty): New function.
	* server.c (server): Check for unread data in buffer before closing.

2004-02-25  Derek Price  <derek@ximbiot.com>

	* release.c (release): Restore the initial directory before and after
	calling various sections of code that expect it to prevent corruption
	of CVS/Entries files on release of a subdir and tell unedit() what to
	release.
	* sanity.sh: Add test case for release.c fix.
	(Original patch from Matthew Ogilvie  <mmo9317bd@mailcan.com>.)

	* client.c (last_entries): Move global variable...
	(call_in_directory): ...here (now a local variable).  Remove test that
	always evaluates to true.
	(last_dir_name): Remove unused global variable.

2004-02-24  Larry Jones  <lawrence.jones@ugsplm.com>

	* filesubr.c (xresolvepath): Fix crash in error case.
	(Reported by Reinhard Zierke <zierke@informatik.uni-hamburg.de>.)

2004-02-24  Derek Price  <derek@ximbiot.com>
